content_shell: Update absolute path rewriting logic again.

With this CL, we rewrite absolute-looking paths only in
web-platform-tests and csswg-test. RewriteAbsolutePathInWPT() doesn't affect
non-W3C tests at all.

BUG=614778

Review-Url: https://codereview.chromium.org/2013203003
Cr-Commit-Position: refs/heads/master@{#396396}

Former-commit-id: 2edc979d193cd4a03ac02b67ccdc7b3a979e6232