components/test_runner/test_runner.h
@@ -132,8 +132,10 @@ class TestRunner : public WebTestRunner {
   bool shouldDumpSpellCheckCallbacks() const;
   bool shouldWaitUntilExternalURLLoad() const;
   const std::set<std::string>* httpHeadersToClear() const;
-  bool did_request_after_reset() const { return did_request_after_reset_; }
-  void set_did_request_after_reset() { did_request_after_reset_ = true; }
+  bool is_web_platform_tests_mode() const {
+    return is_web_platform_tests_mode_;
+  }
+  void set_is_web_platform_tests_mode() { is_web_platform_tests_mode_ = true; }
 
   // To be called when |frame| starts loading - TestRunner will check if
   // there is currently no top-loading-frame being tracked and if so, then it
@@ -639,8 +641,8 @@ class TestRunner : public WebTestRunner {
 
   std::set<blink::WebWidget*> widgets_with_scheduled_animations_;
 
-  // True if we requested any resource after Reset().
-  bool did_request_after_reset_;
+  // True if we run a test in LayoutTests/imported/{csswg-test,wpt}/.
+  bool is_web_platform_tests_mode_;
 
   base::WeakPtrFactory<TestRunner> weak_factory_;
 
